# ELEN90088-SOML

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  requirements.txt
.github/workflows/: claude-code-review.yml  claude.yml  gitleaks.yml
Exercises/: ANEx2_SVM.md  Additional_Notes_Ex_1.md  Additional_Notes_Ex_2.md  SOML2026_Exercise_1.ipynb  SOML2026_Exercise_1_Sol.ipynb  SOML2026_Exercise_2.ipynb  SOML2026_Exercise_2.py
Exercises/How It Works - DNN/: How It Works - DNN in Detail.md  supporter.py
Exercises/Zhiqi's Solution/: SOML2026_Exercise_2.ipynb
Exercises/docs/: ANEX2_VAE-2.md  ANEX2_VAE.md
Exercises/docs/How It Works - DNN/: How It Works - DNN Workflow.md  main.py  my_dnn.py
Project-Description/: Project_1_Learn_to_Optimise.md  Project_2_Hands-on_LLMs.md  SOML_LLM_project.ipynb  SOML_LLM_project_MacOS.yaml  SOML_LLM_project_Windows.yaml  SOML_Project_26S1.md
Project-LLM/: SOML_LLM_project.ipynb  SOML_LLM_project.py
Project-LLM-mini/: DoRA_REFERENCE.md  pyproject.toml
Project-LLM-mini/configs/: dora_mistral7b_boolq_r16.yaml  dora_mistral7b_boolq_r4.yaml  dora_mistral7b_boolq_r8.yaml  lora_mistral7b_boolq_r16.yaml  lora_mistral7b_boolq_r4.yaml  lora_mistral7b_boolq_r8.yaml
Project-LLM-mini/results/: SUMMARY.md
Project-LLM-mini/results/dora_mistral7b_boolq_r16/: config.yaml  metrics.json
Project-LLM-mini/results/dora_mistral7b_boolq_r4/: config.yaml  metrics.json
Project-LLM-mini/results/dora_mistral7b_boolq_r8/: config.yaml  metrics.json
Project-LLM-mini/results/lora_mistral7b_boolq_r16/: config.yaml  metrics.json
Project-LLM-mini/results/lora_mistral7b_boolq_r4/: config.yaml  metrics.json
Project-LLM-mini/results/lora_mistral7b_boolq_r8/: config.yaml  metrics.json
Project-LLM-mini/scripts/: evaluate.py  sbatch_quick.sh  sbatch_train.sh  smoke_test.py  summarize_results.py  train.py
Project-LLM-mini/scripts/local/: setup_env.example.sh
Project-LLM-mini/src/dora_mini/: __init__.py  data.py  eval.py  models.py  paths.py  train.py
Project-LLM-mini/tests/: test_paths.py
Project-LLM/Results-ipynb/: Part-3a-zhiqi.md  Part-3a.md  Part-4.3.3.md  sentiment_results.csv
