[project]
name = "dora-mini"
version = "0.1.0"
description = "DoRA paper reproduction for ELEN90088 SOML mini-project"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "transformers>=4.45,<5",
    "peft>=0.13",
    "accelerate>=1.0",
    "datasets>=3.0",
    "bitsandbytes>=0.43.1",
    "sentencepiece",
    "protobuf",
    "pandas",
    "matplotlib",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
dev = ["jupytext", "ipykernel", "ruff", "pytest"]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
